--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,33 @@
+@font-face {
+  font-family: 'Bold';
+  src: url('../src/font/bold.otf');
+}
+
+@font-face {
+  font-family: 'Italic';
+  src: url('../src/font/italic.otf');
+}
+
+@font-face {
+  font-family: 'Regular';
+  src: url('../src/font/regular.otf');
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Bold', BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
