--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -1,4 +1,19 @@
 .main {
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
+    padding-top: 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+.main .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main .container * {
+    z-index: 4;
 }
