--- a/styles/Components.module.css
+++ b/styles/Components.module.css
@@ -1,3 +1,29 @@
+.gradient_green {
+    bottom: 0;
+    right: 0;
+    opacity: 0.1;
+    width: 1300px;
+    height: 1300px;
+    position: absolute;
+    background-image: radial-gradient(#55F680, rgba(0,0,0,0) , rgba(0,0,0,0));
+    background-size: contain;
+    transform: translateX(500px) scale(1.1);
+    z-index: 1;
+}
+
+.gradient_blue {
+    bottom: 0;
+    left: 0;
+    opacity: 0.05;
+    width: 1300px;
+    height: 1300px;
+    position: absolute;
+    background-image: radial-gradient(#00FFFF, rgba(0,0,0,0) , rgba(0,0,0,0));
+    background-size: contain;
+    transform: translateX(-500px) translateY(500px) scale(1.1);
+    z-index: 1;
+}
+
 .navbar {
     position: fixed;
     height: 100px;
@@ -36,4 +62,64 @@
 
 .button:hover {
     transform: scale(1.1);
+}
+
+.form {
+    border-radius: 20px;
+    padding: 30px;
+    width: 400px;
+    max-width: 400px;
+}
+
+.form .values {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+.form a {
+    text-decoration: underline;
+}
+
+.form label {
+    font-size: 25px;
+}
+
+.form .values input {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding: 6px 10px 6px 10px;
+    border-radius: 10px;
+    border: var(--primary) solid 2px;
+    font-family: Regular;
+    font-size: 20px;
+}
+
+.form .values input:focus {
+    border-color: var(--primary);
+    outline: none;
+}
+
+.form button {
+    background-color: var(--primary);
+    padding: 5px 10px 5px 10px;
+    color: var(--dark);
+    font-family: Bold;
+    font-size: 20px;
+    outline: none;
+    border: hidden;
+    border-radius: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    transition: background 0.2s ease;
+}
+
+.form button:hover {
+    background-color: var(--primary-dark);
+}
+
+.form button .icon {
+    margin-right: 5px;
 }
