--- a/styles/Components.module.css
+++ b/styles/Components.module.css
@@ -1,3 +1,12 @@
+@keyframes rotateLoading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .gradient_green {
     bottom: 0;
     right: 0;
@@ -122,4 +131,33 @@
 
 .form button .icon {
     margin-right: 5px;
+}
+
+.loading {
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-color: var(--dark);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 10;
+}
+
+.loadingHead {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loadingIcon {
+    font-size: 55px;
+    animation: rotateLoading 2s infinite;
+}
+
+.loading p {
+    margin-top: 10px;
+    font-size: 20px;
 }
