--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -1,6 +1,6 @@
 .main {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     padding: 150px 15vw 0px 15vw;
     flex-direction: column;
